# dusklight-mods

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
docs/: deferred_fog.md  deferred_fog_underwater_notes.md  depth_to_normal_consumers.md  depth_to_normal_plan.md  fake_shading_systems.md  local_light_shadows_plan.md  mod-api-notes.md  mod-platform-rebuild-handoff.md  realtime_sun_shadows.md  scene_recon_framework_plan.md  self_editing_guide.md  smaa.md  ssilvb_plan.md  underwater_ao_fade.md  vbao.md  vbgi_plan.md
mods/deferred_fog/: CMakeLists.txt  mod.json
mods/deferred_fog/res/: fog.wgsl
mods/deferred_fog/src/: mod.cpp
mods/depth_to_normal/: CMakeLists.txt  mod.json
mods/depth_to_normal/include/: depth_to_normal_service.h
mods/depth_to_normal/res/: debug.wgsl
mods/depth_to_normal/src/: mod.cpp
mods/effect_remover/: CMakeLists.txt  mod.json
mods/effect_remover/src/: mod.cpp
mods/enhanced_ao/: CMakeLists.txt  mod.json
mods/enhanced_ao/res/: composite.wgsl  denoise.wgsl  preprocess_depth.wgsl  temporal.wgsl  vbao.wgsl
mods/enhanced_ao/src/: mod.cpp
mods/graphics_hub/: CMakeLists.txt  mod.json
mods/graphics_hub/include/: depth_to_normal_service.h  water_plane_service.h
mods/graphics_hub/res/: fog.wgsl  reconstruct.wgsl
mods/graphics_hub/src/: fog_math.h  mod.cpp
mods/local_light_shadows/: CMakeLists.txt  mod.json
mods/local_light_shadows/res/: shadow.wgsl
mods/local_light_shadows/src/: mod.cpp
mods/projected_shadow_removal/: CMakeLists.txt  mod.json
mods/projected_shadow_removal/src/: mod.cpp
mods/realtime_sun_shadows/: CMakeLists.txt  mod.json
mods/realtime_sun_shadows/res/: bend_sss.wgsl  normal_smooth.wgsl  shadow.wgsl  shadow_copy.wgsl
mods/realtime_sun_shadows/src/: bend_sss_cpu.h  mod.cpp
mods/smaa/: CMakeLists.txt  mod.json
mods/smaa/res/: blend_weights.wgsl  edge_detection.wgsl  neighborhood_blend.wgsl
mods/smaa/src/: mod.cpp
mods/ssilvb/: CMakeLists.txt  mod.json
mods/ssilvb/res/: composite.wgsl  denoise.wgsl  preprocess_color.wgsl  preprocess_depth.wgsl  ssilvb.wgsl  temporal.wgsl
mods/ssilvb/src/: mod.cpp
mods/terrain_shadow_removal/: CMakeLists.txt  mod.json
mods/terrain_shadow_removal/src/: mod.cpp
mods/vbao/: CMakeLists.txt  mod.json
mods/vbao/res/: composite.wgsl  denoise.wgsl  preprocess_depth.wgsl  temporal.wgsl  vbao.wgsl
mods/vbao/src/: mod.cpp
mods/vertex_unbake/: CMakeLists.txt  mod.json
mods/vertex_unbake/src/: mod.cpp
tools/: wgsl_validate.cpp
tools/hook_repro/: CMakeLists.txt  host.cpp  mod.cpp
